--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(resize)
+add_compile_options(-O3)
 find_package(OpenCV REQUIRED)
 add_executable(resize main.cpp)
 target_link_libraries(resize ${OpenCV_LIBS})
