stage,avx2,threads,float,&&loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 project(resize)
 add_compile_options(-std=c++11)
 add_compile_options(-O3)
+add_compile_options(-mavx2)
 add_executable(resize main.cpp)
