--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8)
 project(resize)
-add_compile_options(-O3)
+add_compile_options(-O3 -std=c++17)
 add_executable(resize main.cpp)
