--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(resize)
-add_compile_options(-std=c++11)
+#add_compile_options(-std=c++11)
 add_compile_options(-O3)
-add_compile_options(-mavx2)
+add_compile_options(-mavx512f)
+set(CMAKE_EXE_LINKER_FLAGS "-static -pthread -lrt -ldl")
 add_executable(resize main.cpp)
